--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section>
     <article>
       <h2>演示1</h2>
-      <img src="../Dx.github.io/imag/ComfyUI_01302_.png" alt="">
+      <img src="../imag/ComfyUI_01303_.png" alt="">
       <p>
         上飒飒的撒大是打赏的撒的撒的撒的撒的撒大是大啊哒哒哒。
       </p>
